# newsletter-backend-template

./: Cargo.toml  Dockerfile  README.md  notes.txt
configuration/: base.yaml  production.yaml
migrations/: 20220903181431_make_status_not_null_in_subscriptions.sql
src/: configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: post.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
