[package]
name = "newsletter_backend_template"
version = "0.1.0"
edition = "2021"


# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
[lib]
path = "src/lib.rs"



# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature.
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
config = "0.13"
actix-web = "4.0.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
unicode-segmentation = "1.9.0"
validator = "0.16.0"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1"
thiserror = "1"
base64 = "0.13"
sha3 = "0.10.5"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.2"
serde_json = "1"
linkify = "0.9.0"





